# sdxl-lora-trainer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AI.md  LICENSE  README.md  maximizing_gpu_utilization_in_lo_ra_training.md  pyproject.toml  test.sh
.github/workflows/: ci.yml
src/lora_converter/: __init__.py  cli.py  converter.py
src/lora_trainer/: __init__.py  app.py  appsrv.py  bucketing.py  build_trt_cli.py  build_upscaler_trt_cli.py  cli.py  config.py  data.py  hires.py  infer_trt_cli.py  logging.py  model.py  optim.py  pipeline.py  preprocess.py  preprocess_cli.py  prompt_weighting.py  sampler_cli.py  sampling.py  schedulers.py  train_loop.py  utils.py
src/lora_trainer/trt/: __init__.py  backends.py  build.py  cache.py  config.py  inference.py  latents.py  upscaler.py
tests/: __init__.py  test_app_state.py  test_appsrv.py  test_bucketing.py  test_cli_smoke.py  test_config.py  test_data.py  test_logging.py  test_lora_converter.py  test_model.py  test_optim.py  test_prompt_weighting.py  test_sampling.py  test_schedulers.py  test_train_loop.py  test_training_prompt_weighting.py  test_trt_inference.py
