[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lora-trainer"
version = "0.1.0"
description = "Single-purpose, high-UX SDXL LoRA trainer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "diffusers>=0.25.0",
    "transformers>=4.35.0,<5",
    "accelerate>=0.24.0",
    "lycoris-lora>=3.4.0",
    "safetensors>=0.4.0",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]
optim = [
    "prodigyopt",
    "bitsandbytes",
    "nvidia-ml-py",
]
trt = [
    "tensorrt>=10.13.0",
    "onnx>=1.15.0",
    "onnxruntime-gpu>=1.17.0",
]

[project.scripts]
lora-train = "lora_trainer.cli:main"
lora-convert = "lora_converter.cli:main"
lora-build-trt = "lora_trainer.build_trt_cli:main"
lora-infer-trt = "lora_trainer.infer_trt_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["lora_trainer", "lora_converter"]
src_paths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["lora_trainer", "lora_converter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
